--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=
 spring.batch.initialize-schema: always
 
 server.port=1235
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
